# batgrad

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
batgrad/: _loggers.py  logging.py  notebook_helpers.py
batgrad/contracts/: columns.py  domains.py  mapping.py  metadata.py  paths.py  protocols.py  row_ids.py  segments.py  values.py
batgrad/data/: locations.py
batgrad/data/datasets/: config.py  registry.py  specs.py
batgrad/data/datasets/pozzato_2022/: config.py  mapping.py  pipeline.py  raw.py  specs.py
batgrad/data/datasets/synthetic_pozzato_2022/: config.py  mapping.py  raw.py
batgrad/data/processing/: config.py  interactive.py  io.py  manifests.py  metadata.py  normalize.py  normalize_spec.py  pipeline.py  raw.py  raw_spec.py  runtime.py  schema.py  selection.py  sharding.py  stage.py
batgrad/data/transforms/: annotations.py  checks.py  resampling.py  transforms.py
batgrad/ml/: checkpoint.py  config.py  distributed.py  experiment.py  inference.py  loggers.py  loss.py  masked_suffix.py  metrics.py  nn.py  objective.py  rollout.py  train.py  train_utils.py  validation.py
batgrad/ml/data/: batch.py  config.py  index.py  loader.py  materialization.py  planning.py  preview.py  scaling.py
batgrad/storage/: chunks.py  factory.py  local.py  segments.py  store.py
batgrad/viz/: interactive.py  layouts.py  ml.py  plotting.py  sources.py  viewport.py
batgrad/viz/widgets/: plotly_trace_resampler.css  plotly_trace_resampler.js  plotly_trace_resampler.py
configs/: ml_baseline.json  ml_dry_run_cpu.json  ml_dry_run_gpu.json
docker/: brew-packages.txt  container-init.sh  dotfiles.env.example  user-env.sh
docker/providers/runpod/: container-init-hook.sh
docker/providers/vastai/: container-init-hook.sh
docker/terminfo/: xterm-ghostty.terminfo
docs/: container.md  environment-setup.md  index.md  quick-start.md
docs/api/: contracts.md
docs/api/data/: configuration.md  ingested.md  normalized.md  transformations.md
docs/api/datastore/local-data-processing-store/: index.md  local-table-writer.md  paths-and-files.md  table-reads.md  table-writes.md
docs/api/ml/: configuration.md  data-loading.md  inference.md  models.md  training.md
notebooks/: config.py  createconfig.py  data.py  dataloader.py  etl.py  etl_helpers.py  inference.py  inference_helpers.py  ml.py  ml_helpers.py  training.py
notebooks/_support/: __init__.py  config_editor.py  config_helpers.py  dataloader_helpers.py  etl_helpers.py  inference_helpers.py  logging_helpers.py  ml_data_helpers.py  training_helpers.py
scripts/: data_processing.py  hf_assets.py  run_data_processing.py  setup_project.sh  train.py
tests/: conftest.py  fixtures.py
tests/data/processing/: test_ingest.py  test_interactive.py  test_mapping_metadata.py  test_normalize.py  test_runtime.py  test_sharding.py  test_stage.py
tests/data/transforms/: test_annotations.py  test_checks.py  test_resampling.py  test_transforms.py
tests/ml/: conftest.py  test_checkpoint.py  test_config_helpers.py  test_distributed.py  test_import_boundaries.py  test_index_contracts.py  test_inference.py  test_loader.py  test_loader_manifest.py  test_masked_suffix.py  test_objective_trace.py  test_rollout.py  test_train.py  test_train_config.py  test_training_contract.py  test_training_loop.py
tests/notebooks/: test_dataloader_helpers.py  test_inference_helpers.py  test_scaling.py  test_training_helpers.py
tests/scripts/: test_data_processing.py
tests/storage/: test_local_data_processing_store.py
tests/viz/: test_interactive_legend.py  test_ml_rollout.py  test_plotly_trace_resampler.py  test_viewport.py
