[project]
name = "batgrad"
version = "0.1.0"
description = "Get started with data driven battery modeling"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
  "marimo>=0.20.3",
  "anywidget>=0.9.21",
  "tsdownsample>=0.1.4.1",
  "numpy>=2.4.2",
  "plotly>=6.5.2",
  "polars[pyarrow]>=1.38.1",
  "fastexcel>=0.19.0",
  "scipy>=1.17.0",
  "torch>=2.10.0",
  "wandb>=0.25.0",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.20",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.3",
  "pytest>=9.0.2",
  "ruff>=0.15.0",
  "ty>=0.0.22",
  "playwright>=1.55.0",
  "pytest-playwright>=0.7.0",
]
ml = [
  "mamba-ssm; sys_platform == 'linux'",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "batgrad"
module-root = ""

[tool.uv]
environments = [
  "sys_platform == 'linux'",
  "sys_platform == 'darwin'",
]
no-build-isolation-package = ["mamba-ssm"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ty.src]
exclude = [
  "notebooks/*.py",
]

[tool.ruff]
exclude = [
  "notebooks/*.py",
]
target-version = "py312"
respect-gitignore = true
line-length = 100
preview = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
  "COM812", # missing-trailing-comma (conflicts with formatter)
  "TD003", # Missing issue link for this TODO
  "BLE001", # Do not catch blind exception
  "PLR0915", # Too many statements
  "PLR0904", # Too many public methods

  "C901", # mccabe: complexity
  "CPY001", # Missing copyright notice at top of file
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D205", # 1 blank line required between summary line and description
  "D212", # Multi-line docstring summary at first line (conflicts with D213)
  "D400", # First line should end with a period
  "D401", # First line should be in imperative mood
  "D415", # First line should end with a period, question mark, or exclamation point
  "DOC201", # `return` is not documented in docstring
  "DOC402", # `yield` is not documented in docstring
  "DOC502", # Raised exception is not explicitly raised
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "FIX002", # Line contains TODO, consider resolving the issue
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0914", # Too many local variables
  "PLR0917", # Too many positional arguments
  "PLR2004", # Magic value used in comparison
  "TD002", # Missing author in TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["A001", "A002", "N"] # we don't control names in 3rd party modules
"{tests}/**/*.py" = [
  "S", # none of these security focused rules are relevant for tests/build scripts
  "T201",
  "D103", # test function docstrings are optional
  "PLR6301", # test methods don't use self but that's idiomatic for pytest classes
  "PLC0415", # allow imports inside test functions for test isolation
  "SLF001", # allow accessing private members in tests
  "ARG002", # allow unused arguments in stub implementations
  "ANN202", # allow missing return annotation in test stubs
  "DTZ001", # allow naive datetimes in test fixtures
  "NPY002", # allow legacy numpy seed for deterministic test setup
  "TC001", # allow runtime imports in tests
  "TC002", # allow runtime imports of test dependencies
  "TC003", # allow stdlib imports used only for type annotations
]

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.marimo]
keymap = { preset = "vim" }
display = { theme = "dark" }
