[project]
name = "batgrad"
version = "0.0.1"
description = "Get started with foundational models for battery time-series data."
readme = "README.md"
requires-python = "==3.12.*"
license = 'MIT'

dependencies = [
  "marimo>=0.20.3",
  "anywidget>=0.9.21",
  "tsdownsample>=0.1.4.1",
  "numpy>=2.4.2",
  "plotly>=6.5.2",
  "polars[pyarrow]>=1.38.1",
  "fastexcel>=0.19.0",
  "torch>=2.10.0",
  "wandb>=0.25.0",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.20",
  "mkdocstrings[python]>=1.0.3",
  "pytest>=9.0.2",
  "ruff>=0.15.0",
  "ty>=0.0.22",
  "zensical>=0.0.11",
]
ml = [
  "mamba-ssm; sys_platform == 'linux'",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "batgrad"
module-root = ""

[tool.uv]
environments = [
  "sys_platform == 'linux'",
  "sys_platform == 'darwin'",
]
no-build-isolation-package = ["mamba-ssm"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
  "cpu_only: CPU-only behavior contract; must not exercise CUDA execution",
]

[tool.ty.src]
exclude = [
  "notebooks/*.py",
  "notebooks/**/*.py",
  "tests/**/*.py",
]

[tool.ruff]
exclude = [
  "notebooks/*.py",
  "notebooks/**/*.py",
]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # Trailing comma missing
  "D10", # Missing docstring in public ...
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "FIX0", # flake8-fixme (FIX)
  "PLR0913", # Too many arguments in function definition
  "SLF001", # Private member accessed
  "TD001", # Invalid TODO tag
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link in TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN", # type annotations add noise in compact pytest cases.
  "ARG", # unused-argument: pytest fixtures/mocks often use intentionally unused args.
  "INP001", # tests are not application packages.
  "PLR2004", # magic-value-comparison: expected values are the point of tests.
  "PT011", # broad pytest.raises is acceptable when message assertions are explicit elsewhere.
  "PT012", # multiple statements in raises blocks keep setup local in small tests.
  "S101", # assert: allow plain assert statements in tests.
  "SLF001", # private-member-access: tests often intentionally inspect internals.
  "T201", # `print` found
  "TC003", # runtime fixture annotations are clearer than TYPE_CHECKING imports in tests.
]

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
